--- a/landing-page/src/app/app.component.scss
+++ b/landing-page/src/app/app.component.scss
@@ -145,6 +145,12 @@ color: #F8BB47;
     font-size: 16px;
     color: #FFFFFF;
 }
+
+.loginText{
+    font-size: 16px;
+    color: #797979;
+    text-align: center;
+}
 /** Contact **/
 
 .contact{
