Fixed the links and styles on the contact us section

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="hero">
-    <div class="container">
+    <div >
       <div class="hero-content">
         <h1>Disaster Financial Assistance (DFA)</h1>
         <p>After a disaster, the provincial government may declare the event eligible for Disaster Financial Assistance
@@ -126,7 +126,7 @@
                 </div>
               </div>
             </div>
-            <div style="padding-top: 90px;">
+            <div style="padding-top: 30px;">
               <button class="applyButton" (click)="naviagteToPublicDFA()"> 
                   Apply to Public DFA
               </button>
@@ -153,6 +153,7 @@
     <div class="contact">
       <div>
         <img src="images/phonecontact.png" alt="contact" class="contactIcon">
+        
       </div>
       <div>
         <h2>Contact us</h2>
@@ -168,7 +169,7 @@
             Individuals, small businesses, farms or charitable organizations
           </h2>
           <p>
-            Email: <a href="DFA.Private@gov.bc.ca"></a>
+            Email: <a class="--link-black" href="mailto:DFA.Private&#64;gov.bc.ca">DFA.Private&#64;gov.bc.ca</a>
           </p>
         </div>
         <div>
@@ -176,7 +177,7 @@
             Indigenous Governing Bodies and Local Authorities
           </h2>
           <p>
-            Email:
+            Email:<a class="--link-black" href="mailto:DFA.Public&#64;gov.bc.ca">DFA.Public&#64;gov.bc.ca</a>
           </p>
         </div>
         <div>
@@ -184,7 +185,7 @@
             Technical Support
           </h2>
           <p>
-            <a>Send a Technical Inquiry</a>
+            <a class="--link-black" href="mailto:DFA.private@gov.bc.ca">Send a Technical Inquiry</a>
           </p>
         </div>
       </div>
