--- a/landing-page/src/app/app.component.scss
+++ b/landing-page/src/app/app.component.scss
@@ -5,7 +5,11 @@
 }
 
 p {
-    font-size: 16px;
+    font-family: "BCSans-Regular", "BC Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    color: #000000;
     line-height: 24px;
     margin-bottom: 20px;
 }
@@ -25,8 +29,11 @@ h1 {
 }
 
 h2 {
-	font-size: 24px;
-	font-weight: normal;
+	font-family: "BCSans-Bold", "BC Sans Bold", "BC Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 22px;
+    color: #000000;
 }
 
 h3 {
@@ -36,7 +43,10 @@ h3 {
 }
 
 
-
+.--link-black {
+	color: black;
+	cursor: pointer;
+}
 
 /** Site Header **/
 .site-header {
@@ -70,7 +80,7 @@ h3 {
 }
 .hero-content {
 padding: 30px 0 10px 0;
-width:60%;
+max-width: 1084px;
 margin: 0 auto;
 }
 .hero-content h1,
@@ -88,13 +98,15 @@ color:#ffffff !important;
 .card{
     display: flex;
     gap:20px;
-    //width:80%
+    justify-content: center;
+	flex-wrap: wrap;
     
 }
 
 .cardContent{
     flex: 1 1 auto;
-    width:300px;
+    min-width:300px;
+	max-width: 560px;
 }
 
 .cardHeader{
@@ -128,7 +140,7 @@ color: #F8BB47;
 }
 
 .applyButton{
-    width: 700px;
+    width: 100%;
     height: 62px;
     background: inherit;
     background-color: rgba(1, 51, 102, 1);
@@ -144,6 +156,7 @@ color: #F8BB47;
     font-style: normal;
     font-size: 16px;
     color: #FFFFFF;
+	cursor: pointer;
 }
 
 .loginText{
@@ -155,6 +168,7 @@ color: #F8BB47;
 
 .contact{
     display: flex;
+	flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
 }
