Fixed the issues with padding on the public and private cards Fixed styles for  the icons and container for responsive design

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -30,7 +30,7 @@
         <mat-card class="cardContent">
           <mat-card-content>
             <div>
-              <div class="cardHeader">
+              <div class="cardHeader" style="padding-top: 16px;">
                 <div>
                   <img src="images/u67.svg" alt="Individuals and Organizations" class="icon">
                 </div>
@@ -38,7 +38,7 @@
                   Individuals and Organizations
                 </h2>
               </div>
-              <div class="divider">
+              <div class="content-divider">
                 <p>
                   Private sector applicant may receive DFA assistance to restore uninsurable losses critical to homes,
                   livelihoods, or community services.
@@ -106,7 +106,7 @@
               </div>
               <h2>Indigenous Governing Bodies and Local Authorities</h2>
             </div>
-            <div class="divider">
+            <div class="content-divider">
             <p>
               Public sector applicants may receive financial assistance from the DFA program for damaged infrastructure.
             </p>
@@ -137,7 +137,7 @@
                 </div>
               </div>
             </div>
-            <div style="padding-top: 50px;">
+            <div style="padding-top: 65px;">
               <button class="applyButton" (click)="naviagteToPublicDFA()">
                 Apply to Public DFA
               </button>
