DEVOPS 278 DFA Landing Page (DFA 3.0) needs a Responsive Design - Adding the environment banner to landing page - Added a new environment banner component - Added environment service - Added the banner component on the landing page - Added https module to app config - Added info.json environment file to pull the data

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+<app-environment-banner></app-environment-banner>
+  
   <div class="site-header">
     <div class="site-header-content">
       <a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
