--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-<app-environment-banner></app-environment-banner>
-  
+
+  <!-- ENVIRONMENT BANNER -->
+  <div>
+    <app-environment-banner></app-environment-banner>
+  </div>
+
+
   <div class="site-header">
     <div class="site-header-content">
       <a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
@@ -17,6 +22,11 @@
             target="_blank">Learn more about DFA</a></p>
       </div>
     </div>
+  </div>
+
+  <!-- OUTAGE BANNER -->
+  <div>
+    <app-outage-banner></app-outage-banner>
   </div>
 
   <div class="application">
@@ -109,18 +119,19 @@
               <h2>Indigenous Governing Bodies and Local Authorities</h2>
             </div>
             <div class="content-divider">
-            <p>
-              Public sector applicants may receive financial assistance from the DFA program for damaged infrastructure.
-            </p>
-            <p>
-              <b>
-                Want more information about eligibility?
-                <a class="links"
-                  href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa"
-                  target="_blank">See Public sector information</a>
-              </b>
-            </p>
-          </div>
+              <p>
+                Public sector applicants may receive financial assistance from the DFA program for damaged
+                infrastructure.
+              </p>
+              <p>
+                <b>
+                  Want more information about eligibility?
+                  <a class="links"
+                    href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa"
+                    target="_blank">See Public sector information</a>
+                </b>
+              </p>
+            </div>
             <div>
               <div class="icon-text">
                 <mat-icon class="infoIcon">info</mat-icon>
@@ -176,7 +187,7 @@
           </h2>
           <p>For questions or more information, contact the Disaster Financial Assistance team toll-free at</p>
           <a class="--link-black" href="tel:18882574777" style="font-size: 18px;">1-888-257-4777</a>
-          
+
         </div>
         <div>
           <h2>
