--- a/landing-page/src/app/components/environment-banner/environment-banner.component.scss
+++ b/landing-page/src/app/components/environment-banner/environment-banner.component.scss
@@ -5,7 +5,10 @@
     color: white;
     padding: 32px;
     line-height: 32px;
-
+    font-family: "BCSans-Regular", "BC Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
     p {
         margin: 0px;
     }
