DEVOPS 278 DFA Landing Page (DFA 3.0) needs a Responsive Design - Adding the outage banner - Added the outage dates to info.json - Added the environment variables on the outage banner - Added logic to show and hide the outage banner when there are no dates

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -25,9 +25,12 @@
   </div>
 
   <!-- OUTAGE BANNER -->
-  <div>
-    <app-outage-banner></app-outage-banner>
-  </div>
+   @if(environment?.outageDateFrom && environment?.outageDateTo) {
+    <div>
+      <app-outage-banner></app-outage-banner>
+    </div>
+   }
+ 
 
   <div class="application">
     <div class="container">
