--- a/landing-page/src/app/components/outage-banner/outage-banner.component.scss
+++ b/landing-page/src/app/components/outage-banner/outage-banner.component.scss
@@ -1,6 +1,6 @@
 .outageBanner {
     color: rgb(255, 255, 255);
-    padding: 50px;
+    padding: 24px;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -9,11 +9,15 @@
     font-family: "BCSans-Regular", "BC Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
 }
 
 .--link-white{
     color: #FCBA19;
     cursor: pointer;
+}
+
+.underline {
+    text-decoration: underline;
 }
