DEVOPS 278 DFA Landing Page (DFA 3.0) needs a Responsive Design - Adding the outage banner (#776)
* EMCRI # 992 and EMCRI 1002 Portal: Required Fields Not Displaying on the Claim Submission Stage
- Added Total being claimed , Claim total, Claim Eligible GST to review  claim page and recovery Claims page

* EMCRI # 395 Portal DEV: Update language to "Indigenous Governing Bodies and Local Authorities"
- Adjusted the wordings on the dashboard page

* EMCRI # 1001 Portal: Submit Claim Button Incorrectly Visible After Project Closure in Closed Tab
- Aded logic to hide the claims button when the project is closed

* EMCRI# 395 Portal DEV: Update language to "Indigenous Governing Bodies and Local Authorities"
- Fixed the issue with the Indegenous language on the case details page

* EMCR # 1014 Portal: On Project Amendment form, don't display values in certain fields until project amendment has been approved or approved with exceptions
 Fixed the issue with the amendment approved date

* Changes to project amendment

* DEVOPS # 258 DFA Landing Page (DFA 3.0) needs a Responsive Design
-  Added a new angular project for the landing page
- Added the angular material packages and the updated node modules
- Added header and footer components on the landing page
- Added the DFA introduction content on the Landing page
-Added the application type of cards on the landing page
- Adjusted styles on the application type cards

* DEVOPS # 258 DFA Landing Page (DFA 3.0) needs a Responsive Design
- Added DFA public and private button navigations

* Fixed the links and styles on the contact us section

* Fixed styles for the footer links section

* DEVOPS # 258 DFA Landing Page (DFA 3.0) needs a Responsive Design
- Added the links for public and private sector information
- Added responsive styles for the landing page
- Added syles for the card section for both public and private
- Fixed the links for phone numbers

* Fixed the issues with padding on the public and private cards
Fixed st

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-<app-environment-banner></app-environment-banner>
-  
+
+  <!-- ENVIRONMENT BANNER -->
+  <div>
+    <app-environment-banner></app-environment-banner>
+  </div>
+
+
   <div class="site-header">
     <div class="site-header-content">
       <a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
@@ -18,6 +23,14 @@
       </div>
     </div>
   </div>
+
+  <!-- OUTAGE BANNER -->
+   @if(environment?.outageDateFrom && environment?.outageDateTo) {
+    <div>
+      <app-outage-banner></app-outage-banner>
+    </div>
+   }
+ 
 
   <div class="application">
     <div class="container">
@@ -109,18 +122,19 @@
               <h2>Indigenous Governing Bodies and Local Authorities</h2>
             </div>
             <div class="content-divider">
-            <p>
-              Public sector applicants may receive financial assistance from the DFA program for damaged infrastructure.
-            </p>
-            <p>
-              <b>
-                Want more information about eligibility?
-                <a class="links"
-                  href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa"
-                  target="_blank">See Public sector information</a>
-              </b>
-            </p>
-          </div>
+              <p>
+                Public sector applicants may receive financial assistance from the DFA program for damaged
+                infrastructure.
+              </p>
+              <p>
+                <b>
+                  Want more information about eligibility?
+                  <a class="links"
+                    href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa"
+                    target="_blank">See Public sector information</a>
+                </b>
+              </p>
+            </div>
             <div>
               <div class="icon-text">
                 <mat-icon class="infoIcon">info</mat-icon>
@@ -176,7 +190,7 @@
           </h2>
           <p>For questions or more information, contact the Disaster Financial Assistance team toll-free at</p>
           <a class="--link-black" href="tel:18882574777" style="font-size: 18px;">1-888-257-4777</a>
-          
+
         </div>
         <div>
           <h2>
