DEVOPS 278 DFA Landing Page (DFA 3.0) needs a Responsive Design - Adding the outage banner Added startDisplayOutageBanner, OutageStart and outageEnd feilds to info.js - Updtaed the logic to  display the banner when the startDisplayOutageBanner starts - Updated logic to  disapper when the outage ends - Added the datepipe to format the dates - Added checks for the startDisplayOutageBanner, outage end dates in app.ts

--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- OUTAGE BANNER -->
-   @if(environment?.outageDateFrom && environment?.outageDateTo) {
+   @if((startDisplayOutageBanner && currentDate && startDisplayOutageBanner > currentDate) && (outageEnd && currentDate && currentDate < outageEnd)) {
     <div>
       <app-outage-banner></app-outage-banner>
     </div>
